force-app/main/default/objects/Account/fields/Account_ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_ATAK_Code__c</fullName>
    <label>Account ATAK Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>