force-app/main/default/objects/Account/fields/Address_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Address_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Address Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>