force-app/main/default/objects/Account/fields/Alias_commercial_customer_name__c.field-meta.xml
<CustomField>
    <fullName>Alias_commercial_customer_name__c</fullName>
    <label>Alias commercial customer name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>