force-app/main/default/objects/Account/fields/Attention_points_for_execution__c.field-meta.xml
<CustomField>
    <fullName>Attention_points_for_execution__c</fullName>
    <label>Attention Points for Execution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>