force-app/main/default/objects/Account/fields/Check_In_Work__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-In @Work</label>
    <type>Checkbox</type>
</CustomField>