force-app/main/default/objects/Account/fields/Client_Region__c.field-meta.xml
<CustomField>
    <fullName>Client_Region__c</fullName>
    <label>Client Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>