force-app/main/default/objects/Account/fields/Client_sector__c.field-meta.xml
<CustomField>
    <fullName>Client_sector__c</fullName>
    <label>Client sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>