force-app/main/default/objects/Account/fields/Contactperson_commercial_customer_key__c.field-meta.xml
<CustomField>
    <fullName>Contactperson_commercial_customer_key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contactperson commercial customer (key)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>