force-app/main/default/objects/Account/fields/Contactperson_operational_customer_key__c.field-meta.xml
<CustomField>
    <fullName>Contactperson_operational_customer_key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contactperson Operational Customer (key)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contactperson operational customer (key))</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>