force-app/main/default/objects/Account/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>