force-app/main/default/objects/Account/fields/Enterprise_Number__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Number__c</fullName>
    <label>Enterprise Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>