force-app/main/default/objects/Account/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kantoorgebouwen / Immeubles de bureaux</fullName>
                <label>Office Building</label>
            </value>
            <value>
                <fullName>RVT &amp; Ziekenhuizen / Maisons de retraite &amp; hôpitaux</fullName>
                <label>RVT &amp; Hospitals</label>
            </value>
            <value>
                <fullName>Scholen / Ecoles</fullName>
                <label>Schools</label>
            </value>
            <value>
                <fullName>Semi-industriële gebouwen / Bâtiments semi-industriels</fullName>
                <label>Semi-industrial buildings</label>
            </value>
            <value>
                <fullName>Verkoopspunten / Points de ventes</fullName>
                <label>Sales points</label>
            </value>
            <value>
                <fullName>Woningen / Habitations</fullName>
                <label>Residential buildings</label>
            </value>
            <value>
                <fullName>Technische gebouwen / Bâtiments techniques</fullName>
                <label>Technical buildings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>