force-app/main/default/objects/Account/fields/Financial_client_ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>Financial_client_ATAK_Code__c</fullName>
    <label>Financial client ATAK Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>