force-app/main/default/objects/Account/fields/Financial_client_type_ATAK__c.field-meta.xml
<CustomField>
    <fullName>Financial_client_type_ATAK__c</fullName>
    <label>Financial client type ATAK</label>
    <length>100</length>
    <type>Text</type>
</CustomField>