force-app/main/default/objects/Account/fields/Financial_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Financial_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Financial External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>