force-app/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kantoorgebouwen / Immeubles de bureaux</fullName>
            </value>
            <value>
                <fullName>RVT &amp; Ziekenhuizen / Maisons de retraite &amp; hôpitaux</fullName>
            </value>
            <value>
                <fullName>Scholen / Ecoles</fullName>
            </value>
            <value>
                <fullName>Semi-industriële gebouwen / Bâtiments semi-industriels</fullName>
            </value>
            <value>
                <fullName>Verkoopspunten / Points de ventes</fullName>
            </value>
            <value>
                <fullName>Woningen / Habitations</fullName>
            </value>
            <value>
                <fullName>Technische gebouwen / Bâtiments techniques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>