force-app/main/default/objects/Account/fields/Intervention_Registration_Announcement__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Registration_Announcement__c</fullName>
    <inlineHelpText>How many days before a scheduled WO a reminder needs to send to the customer?</inlineHelpText>
    <label>Intervention Registration Announcement</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>