force-app/main/default/objects/Account/fields/Intervention_Registration_Contact__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Registration_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intervention Registration Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Intervention Registration Contact)</relationshipLabel>
    <relationshipName>InterventionAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>