force-app/main/default/objects/Account/fields/Intervention_Registration_Method__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Registration_Method__c</fullName>
    <inlineHelpText>Only if Intervention method is set to &quot;Mail&quot;, an automatic email will be send.</inlineHelpText>
    <label>Intervention Registration Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>