force-app/main/default/objects/Account/fields/Intervention_registration_type__c.field-meta.xml
<CustomField>
    <fullName>Intervention_registration_type__c</fullName>
    <label>Intervention Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week of Excecution</fullName>
            </value>
            <value>
                <fullName>Exact Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>