force-app/main/default/objects/Account/fields/LMRA_Type__c.field-meta.xml
<CustomField>
    <fullName>LMRA_Type__c</fullName>
    <label>LMRA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LMRA_Type</valueSetName>
    </valueSet>
</CustomField>