force-app/main/default/objects/Account/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <formula>TEXT( ShippingLongitude )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <type>Text</type>
</CustomField>