force-app/main/default/objects/Account/fields/Opening_hours__c.field-meta.xml
<CustomField>
    <fullName>Opening_hours__c</fullName>
    <label>Opening Hours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>