force-app/main/default/objects/Account/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Priority used on the work orders of this customer - can be overwritten</description>
    <inlineHelpText>Priority used on the work orders of this customer - can be overwritten</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Priority</valueSetName>
    </valueSet>
</CustomField>