force-app/main/default/objects/Account/fields/Related_account__c.field-meta.xml
<CustomField>
    <fullName>Related_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>