force-app/main/default/objects/Account/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>