force-app/main/default/objects/Account/fields/Type_of_Waste__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Waste__c</fullName>
    <label>Type of Waste</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Waste</valueSetName>
    </valueSet>
</CustomField>