force-app/main/default/objects/Account/recordTypes/Commercial_Account.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Account</fullName>
    <active>true</active>
    <label>Commercial Account</label>
</RecordType>