force-app/main/default/objects/Account/recordTypes/Financial_Account.recordType-meta.xml
<RecordType>
    <fullName>Financial_Account</fullName>
    <active>true</active>
    <label>Financial Account</label>
</RecordType>