force-app/main/default/objects/Account/recordTypes/Financial_Customer.recordType-meta.xml
<RecordType>
    <fullName>Financial_Customer</fullName>
    <active>true</active>
    <label>Financial Customer</label>
</RecordType>