force-app/main/default/objects/Account/recordTypes/Group_Account.recordType-meta.xml
<RecordType>
    <fullName>Group_Account</fullName>
    <active>true</active>
    <label>Group Account</label>
</RecordType>