force-app/main/default/objects/Account/recordTypes/Operational_Account.recordType-meta.xml
<RecordType>
    <fullName>Operational_Account</fullName>
    <active>true</active>
    <label>Operational Account</label>
</RecordType>