force-app/main/default/objects/Account/validationRules/Active_Commercial_Account_VAT.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Commercial_Account_VAT</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name = &apos;Commercial Account&apos; &amp;&amp; TEXT(Status__c) = &apos;Active&apos; &amp;&amp;  Enterprise_Number__c = &apos;&apos;</errorConditionFormula>
    <errorMessage>Enterprise Number is required for active commercial accounts</errorMessage>
</ValidationRule>